Ensure labels are still visible in site footer.

--- a/assets/stylesheets/layout/_colophon.scss
+++ b/assets/stylesheets/layout/_colophon.scss
@@ -22,8 +22,13 @@
 		transform: rotate(180deg);
 	}
 
-	a {
+	a,
+	label {
 		color: $color__white;
+	}
+
+	label {
+		font-weight: 400;
 	}
 }
 
